# ibrl

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  result_interpretation.md  setup.config  setup.py
.github/workflows/: tests.yml
ibrl/: __init__.py
ibrl/agents/: __init__.py  base_agent.py  bayesian_q.py  classical_q.py  ib_q.py
ibrl/belief/: __init__.py  credal_interval.py  credal_rectangle.py  wasserstein_ball.py
ibrl/envs/: __init__.py  bandit.py  base_env.py  misspecified_newcomb.py  newcomb.py  transparent_newcomb.py  twin_pd.py
ibrl/experiments/: __init__.py  compare_all.py  run_bandit.py  run_misspecified.py  run_newcomb.py  run_twin_pd.py  run_wasserstein.py
ibrl/predictors/: __init__.py  logical_predictor.py
ibrl/utils/: __init__.py  plotting.py  seeding.py
scripts/: run_all.sh
tests/: __init__.py  test_bandit_env.py  test_convergence.py  test_credal_rectangle.py  test_ib_agent.py  test_misspecified.py  test_newcomb_env.py  test_twin_pd.py  test_wasserstein.py
